// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArchivatorConfiguration is possible to get archive CSV lines by asking createIterable 1`] = `
Array [
  Object {
    "archive": null,
    "selector": "body",
    "truncate": "script,style,noscript,template",
    "url": "https://ponyfoo.com/articles/const-variables-not-immutable",
  },
  Object {
    "archive": null,
    "selector": "body",
    "truncate": "script,style,noscript,template",
    "url": "http://omergil.blogspot.com.br/2017/02/web-cache-deception-attack.html",
  },
  Object {
    "archive": null,
    "selector": "body",
    "truncate": "script,style,noscript,template",
    "url": "https://alistapart.com/article/application-cache-is-a-douchebag/index.html",
  },
]
`;

exports[`ArchivatorConfiguration is possible to get enumeration of archives 1`] = `
Array [
  Object {
    "archiveFolder": "paleo-recipes",
    "archiveName": "paleo-recipes",
  },
  Object {
    "archiveFolder": "some/nested/folder/research-papers",
    "archiveName": "research-papers",
  },
]
`;

exports[`ArchivatorConfiguration is possible to get enumeration of archives 2`] = `
Map {
  "paleo-recipes" => Object {
    "archiveFolder": "paleo-recipes",
    "archiveName": "paleo-recipes",
  },
  "research-papers" => Object {
    "archiveFolder": "some/nested/folder/research-papers",
    "archiveName": "research-papers",
  },
}
`;

exports[`ArchivatorConfiguration is possible to get one archive by asking getArchiveByName 1`] = `
Object {
  "archiveFolder": "paleo-recipes",
  "archiveName": "paleo-recipes",
}
`;
